--- a/account/templates/account/orders.html
+++ b/account/templates/account/orders.html
@@ -22,7 +22,7 @@
                     <td>{{ o.id }}</td>
                     <td>{{ o.order_date }}</td>
                     <td>{{ o.date_of_completion }}</td>
-                    <td>{{ o.cutter.username }}</td>
+                    <td>{{ o.cutter }}</td>
                     <td>{{ o.get_status_display }}</td>
                     <td>{{ o.items.count }}</td>
                     <td>{{ o.price }}</td>
