--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -10,7 +10,7 @@
                 <form class="order-item-form" method="get"  action={% url 'shop:add_to_cart' %} >
                     <input type="hidden" name="model" value="{{ model.id }}" class="model">
                     <div class="card text-center">
-                        <img class="card-img-top " style="height:300px;width:300px; margin: auto" src="{{ model.image.url }}" alt="Card image cap">
+                        <img class="card-img-top " style="height:300px;width:300px; margin: auto;" src="{{ model.image.url }}" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">{{ model.name }}</h5>
                             <p class="card-subtitle mb-2 text-muted">{{ model.type.name }}</p>
@@ -32,14 +32,6 @@
                                         {% endfor %}
                                     </select>
                                 </div>
-{#                                <div class="col-md-4">#}
-{#                                    <label>Закройщик</label>#}
-{#                                    <select class="form-control cutter" name="cutter" >#}
-{#                                        {% for cutter in cutters %}#}
-{#                                            <option value={{ cutter.pk }}>{{ cutter.username }}</option>#}
-{#                                        {% endfor %}#}
-{#                                    </select>#}
-{#                                </div>#}
                             </div>
                             <button type="submit" class="btn btn-info btn-block add-order-item-to-cart" style="margin-top:10px" id="sub_button">Добавить</button>
                         </div>
