--- a/studio_auth/templates/studio_auth/signup.html
+++ b/studio_auth/templates/studio_auth/signup.html
@@ -1,4 +1,4 @@
-{#{% extends 'base.html' %}#}
+{#{% extends 'base_site.html' %}#}
 {% extends 'auth_base.html' %}
 {% block content %}
     <div class="container">
